		- Add CART algorithm for classification and regression using decision trees [Parijat Mazumdar]
		- Add CHAID algorithm for multiclass classification and regression using decision trees [Parijat Mazumdar]
		- Add Convolutional Neural Networks [Khaled Nasr]
		- Add Random Forests algorithm for ensemble learning using CART [Parijat Mazumdar] 
		- Add Restricted Botlzmann Machines [Khaled Nasr]
	* Bugfixes:
		- Fix reference counting bugs in CList when reference counting is on [Heiko Strathmann, Thoralf Klein, lambday]
		- Fix memory problem in PCA::apply_to_feature_matrix [Parijat Mazumdar]
		- Fix crash in LeastAngleRegression for the case D greater than N [Parijat Mazumdar]
		- Fix memory violations in bundle method solvers [Thoralf Klein]
		- Fix fail in library_mldatahdf5.cpp example when http://mldata.org is not working properly [Parijat Mazumdar]
		- Fix memory leaks in Vowpal Wabbit, LibSVMFile and KernelPCA [Thoralf Klein]
		- Fix memory and control flow issues discovered by Coverity [Thoralf Klein]
	* Cleanup and API Changes:
		- PCA now depends on Eigen3 instead of LAPACK [Parijat Mazumdar]
		- Removing redundant and fixing implicit imports [Thoralf Klein]

2014-02-17 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.2.0 (libshogun 16.0, data 0.8, parameter 1)
	* This release also contains several cleanups and bugfixes:
	* Features:
		- Fully support python3 now
		- Add mini-batch k-means [Parijat Mazumdar]
		- Add k-means++ [Parijat Mazumdar]
		- Add sub-sequence string kernel [lambday]
	* Bugfixes:
		- Compile fixes for upcoming swig3.0
		- Speedup for gaussian process' apply()
		- Improve unit / integration test checks
		- libbmrm uninitialized memory reads [Thoralf Klein]
		- libocas uninitialized memory reads
		- Octave 3.8 compile fixes [Orion Poplawski]
		- Fix java modular compile error [Bjoern Esser]
	* Cleanup and API Changes:
		- None

2014-01-06 Soeren Sonnenburg <sonne@debian.org>
