@@ -1,0 +1,3 @@
+%{
+ #include <shogun/machine/StochasticGBMachine.h>
+%}
